fixed car card alignment

--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -16,6 +16,13 @@
 
 .car img{
   width: 100%;
+  max-height: 162px;
+  display: block;
+  object-fit: cover;
+}
+
+.car img:hover{
+  width: 100%;
   height: 100%;
   max-height: 162px;
   display: block;
@@ -26,7 +33,7 @@
   max-width: 500px;
   width: 100%;
   margin: 20px;
-  margin: 15px 0;
+  margin: 30px 0 15px 0;
 }
 .boxDetails h2{
   color: darkblue;
